'contact me' page

--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -27,13 +27,7 @@
                <a href="{% url 'core:shop' %}" class="nav__link">Shop</a>
             </li>
             <li class="nav__item">
-               <a href="#" class="nav__link">Services</a>
-            </li>
-            <li class="nav__item">
-               <a href="#" class="nav__link">Featured</a>
-            </li>
-            <li class="nav__item">
-               <a href="#" class="nav__link">Contact Me</a>
+               <a href="{% url 'core:contact_me' %}" class="nav__link">Contact Me</a>
             </li>
          </ul>
          <!-- Close button -->
