--- a/templates/user/password_reset_email.html
+++ b/templates/user/password_reset_email.html
@@ -2,10 +2,14 @@
 <title>SENJA</title>
 <link rel="stylesheet" href="{% static 'assets/signin.css' %}">
 <link rel="stylesheet" href="{% static 'assets/messages.css' %}">
+<link rel="stylesheet" href="{% static 'assets/loader.css' %}">
 <div class="message-container">
     {% for message in messages %}
     <div {% if message.tags %} class="message-{{message.tags}}" {% endif %}>{{message}}</div>
     {% endfor %}
+</div>
+<div id="loader" class="loader-container" style="display: none;">
+    <div class="spinner"></div>
 </div>
 <body>
     <img class="back" src="{% static 'img/login_back.jpg' %}" alt="image">
@@ -22,3 +26,4 @@
         </form>
     </div>
 </body>
+<script src="{% static 'js/loader.js' %}"></script>
