--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}SENJA{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'assets/messages.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/loader.css' %}">
 </head>
 <body>
     {% include 'assets/navbar.html' %}
@@ -14,7 +15,11 @@
         <div {% if message.tags %} class="message-{{message.tags}}" {% endif %}>{{message}}</div>
         {% endfor %}
     </div>
+    <div id="loader" class="loader-container" style="display: none;">
+        <div class="spinner"></div>
+    </div>
     {% block body %}
     {% endblock %}
 </body>
+<script src="{% static 'js/loader.js' %}"></script>
 </html>
