--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -2,11 +2,15 @@
 <title>SENJA</title>
 <link rel="stylesheet" href="{% static 'assets/signin.css' %}">
 <link rel="stylesheet" href="{% static 'assets/messages.css' %}">
+<link rel="stylesheet" href="{% static 'assets/loader.css' %}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div class="message-container">
     {% for message in messages %}
     <div {% if message.tags %} class="message-{{message.tags}}" {% endif %}>{{message}}</div>
     {% endfor %}
+</div>
+<div id="loader" class="loader-container" style="display: none;">
+    <div class="spinner"></div>
 </div>
 <body>
     <img class="back" src="{% static 'img/login_back.jpg' %}" alt="image">
@@ -29,3 +33,4 @@
         </div>
     </div>
 </body>
+<script src="{% static 'js/loader.js' %}"></script>
