--- a/staticfiles/assets/navbar.css
+++ b/staticfiles/assets/navbar.css
@@ -125,6 +125,7 @@ header a {
     width: 100%;
     padding-block: 4.5rem 4rem;
     transition: top .4s;
+    z-index: 10;
   }
 }
 
@@ -206,4 +207,21 @@ header a {
       width: 50px;
       height: 50px;
       }
+}
+
+.cartCount{
+  position: absolute;
+  color: white;
+  background: black;
+  text-align: center;
+  line-height: 100%;
+  border-radius: 50%;
+  padding: 2px 5px;
+  bottom: -10px;
+  right: -10px;
+}
+
+.cartCountMother{
+  position: relative;
+  transition: top .4s;
 }
